src/objects/Ven_KeyPerformanceIndicatorBlock__c.object
<CustomObject>
    <fields>
        <fullName>Ven_FullYearView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Year View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Last6MonthsView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last 6 months View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_MonthlyView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monthly View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_YearToDateView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year-to-Date View</label>
        <type>Checkbox</type>
    </fields>
    <label>Key Performance Indicator Block</label>
    <nameField>
        <label>KPI Block</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Performance Indicator Blocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>